{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 134,
  "lineage": "1a5e0768-c285-b5fb-0042-4c3b4b319398",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1e61a80c7ab943e",
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:instance/i-0c467e30f0d5eee1f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c467e30f0d5eee1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "multi-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0281e367618eecbf6",
            "private_dns": "ip-10-0-1-180.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-3-38-179-122.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.179.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03c358357a8c155a1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1c5b5d076dbdd05",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ccbc5745d5193fd4"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.ecr-public-subnet",
            "aws_vpc.sangmin-vpc",
            "data.aws_ami.al-recent"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecr-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:internet-gateway/igw-0a1aadd532dd975c4",
            "id": "igw-0a1aadd532dd975c4",
            "owner_id": "662947429974",
            "tags": {
              "Name": "ecr-igw"
            },
            "tags_all": {
              "Name": "ecr-igw"
            },
            "vpc_id": "vpc-0064fbaf918eeb2dd"
          },
          "dependencies": [
            "aws_vpc.sangmin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecr-igw-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:route-table/rtb-0af94a59dba561109",
            "id": "rtb-0af94a59dba561109",
            "owner_id": "662947429974",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1aadd532dd975c4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecr-igw-rt"
            },
            "tags_all": {
              "Name": "ecr-igw-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0064fbaf918eeb2dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecr-igw",
            "aws_vpc.sangmin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecr-pub-subnet-2a-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9973ed925604aca",
            "route_table_id": "rtb-0af94a59dba561109",
            "subnet_id": "subnet-0a1c5b5d076dbdd05"
          },
          "dependencies": [
            "aws_internet_gateway.ecr-igw",
            "aws_route_table.ecr-igw-rt",
            "aws_subnet.ecr-public-subnet",
            "aws_vpc.sangmin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecr-pub-subnet-2c-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c32b09b3f542371a",
            "route_table_id": "rtb-0af94a59dba561109",
            "subnet_id": "subnet-099748afb8afb00e5"
          },
          "dependencies": [
            "aws_internet_gateway.ecr-igw",
            "aws_route_table.ecr-igw-rt",
            "aws_subnet.ecr-public-subnet",
            "aws_vpc.sangmin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group/sg-0ccbc5745d5193fd4",
            "description": "Allow ssh inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccbc5745d5193fd4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "662947429974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0064fbaf918eeb2dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sangmin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecr-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:subnet/subnet-00a5a10d3ac469565",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a5a10d3ac469565",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662947429974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecr-pri-subnet-2a-1"
            },
            "tags_all": {
              "Name": "ecr-pri-subnet-2a-1"
            },
            "vpc_id": "vpc-0064fbaf918eeb2dd"
          },
          "dependencies": [
            "aws_vpc.sangmin-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:subnet/subnet-037203047833b4527",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037203047833b4527",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662947429974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecr-pri-subnet-2c-2"
            },
            "tags_all": {
              "Name": "ecr-pri-subnet-2c-2"
            },
            "vpc_id": "vpc-0064fbaf918eeb2dd"
          },
          "dependencies": [
            "aws_vpc.sangmin-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:subnet/subnet-0d329e1620b8840d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d329e1620b8840d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662947429974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecr-pri-subnet-2a-3"
            },
            "tags_all": {
              "Name": "ecr-pri-subnet-2a-3"
            },
            "vpc_id": "vpc-0064fbaf918eeb2dd"
          },
          "dependencies": [
            "aws_vpc.sangmin-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:subnet/subnet-0b22785e5218fae86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b22785e5218fae86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662947429974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecr-pri-subnet-2c-4"
            },
            "tags_all": {
              "Name": "ecr-pri-subnet-2c-4"
            },
            "vpc_id": "vpc-0064fbaf918eeb2dd"
          },
          "dependencies": [
            "aws_vpc.sangmin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecr-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:subnet/subnet-0a1c5b5d076dbdd05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1c5b5d076dbdd05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "662947429974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecr-pub-subnet-2a"
            },
            "tags_all": {
              "Name": "ecr-pub-subnet-2a"
            },
            "vpc_id": "vpc-0064fbaf918eeb2dd"
          },
          "dependencies": [
            "aws_vpc.sangmin-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:subnet/subnet-099748afb8afb00e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099748afb8afb00e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "662947429974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecr-pub-subnet-2c"
            },
            "tags_all": {
              "Name": "ecr-pub-subnet-2c"
            },
            "vpc_id": "vpc-0064fbaf918eeb2dd"
          },
          "dependencies": [
            "aws_vpc.sangmin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sangmin-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:vpc/vpc-0064fbaf918eeb2dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae52199b546afbba",
            "default_route_table_id": "rtb-0d6e1edd068fb107e",
            "default_security_group_id": "sg-0990f46a3c30d511a",
            "dhcp_options_id": "dopt-0f8b57f0fd990868a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0064fbaf918eeb2dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6e1edd068fb107e",
            "owner_id": "662947429974",
            "tags": {
              "Name": "sangmin-vpc"
            },
            "tags_all": {
              "Name": "sangmin-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group-rule/sgr-04589a7283c42b524",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04589a7283c42b524",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ccbc5745d5193fd4",
            "security_group_rule_id": "sgr-04589a7283c42b524",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.sangmin-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group-rule/sgr-06ac47efadc44336e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-06ac47efadc44336e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ccbc5745d5193fd4",
            "security_group_rule_id": "sgr-06ac47efadc44336e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.sangmin-vpc"
          ]
        }
      ]
    }
  ]
}